samples/_failures_safe/1761528027_b132f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5a7f6c5.c: In function ‘main’:
./samples/SAFE/__tmp_c5a7f6c5.c:145:9: error: expected declaration or statement at end of input
  145 |         search_word[len - 1] = '\0';
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_c5a7f6c5.c:145:9: error: expected declaration or statement at end of input
